--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ VITE_BASE_PATH=
 VITE_SERVER_URL=https://api-dev-minimal-v6.vercel.app
 VITE_ASSET_URL=https://api-dev-minimal-v6.vercel.app
 
-# VITE_PROJECT_APP_API = http://192.168.0.216:5000
-VITE_PROJECT_APP_API = https://ivqggamu16.execute-api.us-east-1.amazonaws.com/dev
+VITE_PROJECT_APP_API = http://127.0.0.1:5000
+# VITE_PROJECT_APP_API = https://ivqggamu16.execute-api.us-east-1.amazonaws.com/dev
 # VITE_PROJECT_APP_API = http://192.168.0.220:5000
 # VITE_PROJECT_APP_API = http://127.0.0.1:5000
 
