--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@mui/x-data-grid": "^7.17.0",
     "@mui/x-data-grid-generator": "^7.17.0",
     "@mui/x-data-grid-pro": "^7.17.0",
-    "@mui/x-date-pickers": "^7.7.0",
+    "@mui/x-date-pickers": "^7.28.0",
     "@mui/x-tree-view": "^7.7.0",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.7",
@@ -68,6 +68,7 @@
     "autosuggest-highlight": "^3.3.4",
     "aws-amplify": "^6.3.6",
     "axios": "^1.7.9",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "embla-carousel": "^8.1.5",
     "embla-carousel-auto-height": "^8.1.5",
