--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ VITE_SERVER_URL=https://api-dev-minimal-v6.vercel.app
 VITE_ASSET_URL=https://api-dev-minimal-v6.vercel.app
 
 # VITE_PROJECT_APP_API = http://192.168.0.216:5000
-VITE_PROJECT_APP_API = https://ivqggamu16.execute-api.us-east-1.amazonaws.com/dev
+# VITE_PROJECT_APP_API = https://ivqggamu16.execute-api.us-east-1.amazonaws.com/dev
+VITE_PROJECT_APP_API = https://8t2shv06vg.execute-api.us-east-1.amazonaws.com/dev
 # VITE_PROJECT_APP_API = https://sharepoint-backend.onrender.com/
 
 # Mapbox
