updated code of email notification  UI

--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ VITE_BASE_PATH=
 VITE_SERVER_URL=https://api-dev-minimal-v6.vercel.app
 VITE_ASSET_URL=https://api-dev-minimal-v6.vercel.app
 
-VITE_PROJECT_APP_API = http://127.0.0.1:5000
+# VITE_PROJECT_APP_API = http://127.0.0.1:5000
 # VITE_PROJECT_APP_API=http://localhost:5000
-# VITE_PROJECT_APP_API = https://8t2shv06vg.execute-api.us-east-1.amazonaws.com/dev
+VITE_PROJECT_APP_API = https://8t2shv06vg.execute-api.us-east-1.amazonaws.com/dev
 
 
 
