--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.16.7",
     "@mui/styles": "^6.1.0",
+    "@mui/system": "^7.1.0",
     "@mui/utils": "^6.1.2",
     "@mui/x-data-grid": "^7.17.0",
     "@mui/x-data-grid-generator": "^7.17.0",
@@ -113,6 +114,7 @@
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.5",
     "turndown": "^7.2.0",
+    "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.20.0",
     "zod": "^3.23.8"
   },
